--- a/main-project/src/pages/ApiHw.module.css
+++ b/main-project/src/pages/ApiHw.module.css
@@ -18,9 +18,17 @@
     border-radius: 5px;
     background-color: #fff;
 }
+.vipGrid .vip:hover{
+    border: 1px solid #333;
+}
 .vipGrid .vip .img{
     width: 100px;
     height: 100px;
     border-radius: 50%;
     margin-bottom: 1rem;
+    transition: all 0.3s;
+}
+.vipGrid .vip:hover .img{
+    scale: 1.2;    
+    border-radius: 0;
 }
