--- a/main-project/src/pages/Home.module.css
+++ b/main-project/src/pages/Home.module.css
@@ -4,7 +4,7 @@ ul.categories {
     align-items: center;
     list-style: none;
     margin: 20px 0;
-    flex-direction: column;
+    flex-direction: row;
 }
 ul.categories li {
     margin: 10px 0;
